manifests/immich-postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-postgres
  namespace: immich
spec:
  selector:
    matchLabels:
      app: immich-postgres
  serviceName: immich-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
      - name: postgres
        image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0@sha256:bcf63357191b76a916ae5eb93464d65c07511da41e3bf7a8416db519b40b1c23
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
        - name: shm
          mountPath: /dev/shm
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: immich-postgres-data
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  namespace: immich
spec:
  selector:
    app: immich-postgres
  ports:
  - port: 5432
    targetPort: 5432
